--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node server/index.js",
     "dev": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+    "prod-start": "forever stopall && PORT=80 forever start server/index.js"
   },
   "author": "",
   "license": "ISC",
