--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "google-spreadsheet": "^2.0.3"
+    "google-spreadsheet": "^2.0.3",
+    "random-uuid": "^1.0.2"
   }
 }
