Add PST timezone time

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "google-spreadsheet": "^2.0.3",
+    "moment-timezone": "^0.5.11",
     "random-uuid": "^1.0.2"
   }
 }
